login page start

--- a/app.json
+++ b/app.json
@@ -4,25 +4,26 @@
     "slug": "bondgo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/bondgologo.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/bondgologo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.yourcompany.bondgo"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/bondgologo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.yourcompany.bondgo"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/bondgologo.png"
     }
   }
 }
