--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
     "@types/react": "^18.3.12",
+    "babel-plugin-macros": "^3.1.0",
     "expo": "~52.0.11",
+    "expo-font": "^13.0.1",
     "expo-status-bar": "^2.0.0",
     "firebase": "^11.0.2",
     "react": "18.3.1",
